scrollbar fix

--- a/public/movie/css/movie.css
+++ b/public/movie/css/movie.css
@@ -5,6 +5,27 @@ body {
     font-family: 'Jost', sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--primary-light);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--primary-dark);
+}
+
 a {
     display: inline-block;
     transition: all .2s;
